BREAKING CHANGE: baseImage made required (automatic base image selection removed)